--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "lint-staged": "9.5.0",
     "prettier": "1.19.1",
     "typescript": "3.7.3"
+  },
+  "engines": {
+    "node": "13.9.0"
   }
 }
