--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,9 +31,12 @@
   },
   "dependencies": {
     "@sendgrid/mail": "6.4.0",
+    "@types/bull": "^3.12.1",
+    "@types/express-jwt": "^0.0.42",
     "apollo-server-express": "2.9.14",
     "aws-sdk": "2.580.0",
     "bcryptjs": "2.4.3",
+    "bull": "^3.13.0",
     "class-transformer": "^0.2.3",
     "connect-redis": "4.0.3",
     "dataloader": "1.4.0",
