--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+[build]
+  publish = "packages/web/build"
+  command = "yarn build:web"
+  
+[build.environment]
+  YARN_VERSION = "1.21.1"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
