--- a/packages/api/ormconfig.json
+++ b/packages/api/ormconfig.json
@@ -14,7 +14,7 @@
   {
     "name": "production",
     "type": "postgres",
-    "synchronize": false,
+    "synchronize": true,
     "logging": true,
     "entities": ["packages/api/dist/modules/**/*.entity.js"],
     "migrations": ["packages/api/dist/db/migrations/*.js"],
