--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@apollo/client": "3.0.0-beta.16",
     "@apollo/react-hooks": "3.1.3",
+    "@babel/helper-call-delegate": "^7.8.7",
     "@chakra-ui/core": "0.5.2",
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
@@ -50,7 +51,7 @@
     "react-dom": "16.12.0",
     "react-dropzone": "10.2.1",
     "react-hook-form": "4.4.1",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "routing-controllers": "^0.8.0",
     "styled-components": "^4.4.1",
     "styled-icons": "^9.1.0",
