refactor: Use text editor in admin

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -45,6 +45,7 @@
     "express-jwt": "^5.3.1",
     "graphql": "^14.5.8",
     "interweave": "^12.1.1",
+    "jodit-react": "^1.0.42",
     "limax": "^2.0.0",
     "react": "^16.12.0",
     "react-beautiful-dnd": "12.2.0",
