--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -39,6 +39,7 @@
     "@noquarter/utils": "1.0.8",
     "@reach/router": "1.3.1",
     "@sentry/node": "^5.14.2",
+    "@styled-icons/evaicons-solid": "^10.5.0",
     "bullmq": "^1.6.6",
     "dayjs": "1.8.18",
     "emotion-theming": "10.0.27",
@@ -53,6 +54,7 @@
     "react-dropzone": "10.2.1",
     "react-hook-form": "4.4.1",
     "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
     "routing-controllers": "^0.8.0",
     "styled-components": "^4.4.1",
     "styled-icons": "^9.1.0",
