--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -40,6 +40,7 @@
     "@reach/router": "1.3.1",
     "@sentry/node": "^5.14.2",
     "@styled-icons/evaicons-solid": "^10.5.0",
+    "@types/react-scroll": "^1.5.5",
     "bullmq": "^1.6.6",
     "dayjs": "1.8.18",
     "emotion-theming": "10.0.27",
